--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -45,6 +45,7 @@ body {
 }
 
 body {
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.3;
